fixed project spacing

--- a/main.css
+++ b/main.css
@@ -108,7 +108,7 @@ header {
 }
 
 .project-one {
-   margin: 5px 15% 0 0;
+   margin: 10px 2% 0 0;
 }
 
 .project-one h2 {
